--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -15,8 +15,16 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="{{ path('portfolio_general_homepage') }}"><i class="fa fa-home"></i>  Accueil</a></li>
-                <li><a href="{{ path('fos_user_profile_show') }}"><i class="fa fa-send-o"></i>  Login</a></li>
             </ul>
+                <ul class="nav navbar-nav navbar-right">
+                {% if is_granted("IS_AUTHENTICATED_FULLY") %}
+                    <li><a class=navbar-brand" href="{{ path('fos_user_profile_show') }}">{{ app.user.username }}</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}">
+                        <i class="fa fa-send-o"></i>  {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
+                {% else %}
+                    <li><a href="{{ path('fos_user_profile_show') }}"><i class="fa fa-send-o"></i>  Login</a></li>
+                {%endif%}
+                </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </div>
