--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ path('portfolio_general_homepage') }}"><i class="fa fa-home"></i>  Accueil</a></li>
                 <li><a href="{{ path('portfolio_project_homepage') }}"><i class="fa fa-file-text"></i>  Projects</a></li>
-                <li><a href=""><i class="fa fa-share"></i>  Contact</a></li>
+                <li><a href="{{ path('mremi_contact_form') }}"><i class="fa fa-share"></i>  Contact</a></li>
             </ul>
                 <ul class="nav navbar-nav navbar-right">
                 {% if is_granted("IS_AUTHENTICATED_FULLY") %}
